--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <label for="message" class="form-label">Message</label>
                 <textarea class="form-control" id="message" rows="3"></textarea>
               </div>
-              <button type="submit" class="btn btn-success">Submit</button>
+              <button type="submit" class="btn btn-danger">Submit</button>
             </form>
           </div>
         </div>
